[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/SaveLoadScreen.gd" type="Script" id=1]

[node name="SaveLoadScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = 200.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Visuals" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_right = 790.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/VBoxContainer/Visuals"]
margin_right = 790.0
margin_bottom = 366.0

[node name="ConsoleLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/Visuals/ScrollContainer"]
margin_bottom = 14.0

[node name="Buttons" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 370.0
margin_right = 790.0
margin_bottom = 390.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/Buttons"]
margin_right = 790.0
margin_bottom = 20.0
alignment = 2

[node name="Save" type="Button" parent="MarginContainer/Panel/VBoxContainer/Buttons/HBoxContainer"]
margin_left = 703.0
margin_right = 744.0
margin_bottom = 20.0
text = "Save"

[node name="Load" type="Button" parent="MarginContainer/Panel/VBoxContainer/Buttons/HBoxContainer"]
margin_left = 748.0
margin_right = 790.0
margin_bottom = 20.0
text = "Load"

[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/Buttons/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/Buttons/HBoxContainer/Load" to="." method="_on_Load_pressed"]
